--- a/07-discussion.tex
+++ b/07-discussion.tex
@@ -17,6 +17,13 @@ discussion by looking back at the related works and put your work into
 perspective. Remember to discuss and show insights into the scientific
 possibilities of this work and its limitations
 
+\subsection{\translate{Consequence
+    analysis}/\translate{Recommendation}}\label{subsec:recommendation} 
+
+Discuss the scientific impact and the contribution of your work. What will be the consequences of
+this new knowledge? If you are working with an industry problem, what do you recommend the company
+to continue to pursue?
+
 \subsection{\translate{Ethical and societal discussion}}\label{subsec:ethical_discussions}
 You will need to include a discussion on ethics, societal impact, and
 considerations. Use the human perspective, how will we be effected by this work,
