--- a/thesis.tex
+++ b/thesis.tex
@@ -1,3 +1,9 @@
+%Author of the LaTeX-class is Lennart Franked
+%Main author of the contents in the thesis template is Stefan Forsström at Mid Sweden University
+
+%When writing your thesis in Swedish, only change in the documentclass from English to Swedish. All
+%section headings that have a translate will automatically be changed to the swedish translation.
+
 \documentclass[english]{miunthesis}
 %\documentclass[swedish]{miunthesis}
 \usepackage{csquotes}
