--- a/01-intro.tex
+++ b/01-intro.tex
@@ -14,7 +14,7 @@ retrospective.
 
 \subsection{\translate{Overall aim and problem statement}}\label{subsec:aim}
 \noindent
-Explain why we are doing this, the higher reason for this work i.e. the purpose. The project's aim
+Explain why we are doing this, the higher reason for this work i.e.\ the purpose. The project's aim
 should be written as an insightful description of the direction in which you want to work, your
 hopes with regards to the possible outcomes of the project, and of the projects' higher purpose. Be
 visionary and futuristic regarding the end goal of the thesis.
