--- a/00-acknowledgements.tex
+++ b/00-acknowledgements.tex
@@ -3,5 +3,5 @@
 \addcontentsline{toc}{section}{\translate{Acknowledgements}} 
 Acknowledgements are not mandatory but can be applied if you as the writer wish to provide general
 information about your exam work or project work, educational programme, institution, business,
-tutors and personal comments, i.e. thanks to any persons that may have helped you. Acknowledgements
+tutors and personal comments, i.e.\ thanks to any persons that may have helped you. Acknowledgements
 are to be placed on a separate page.
