Fixed a small error

--- a/04-prestudy.tex
+++ b/04-prestudy.tex
@@ -24,7 +24,7 @@ Another, etc.
 Analyze the identified requirements, compare different approaches to another, benefits, drawbacks?
 Pros vs cons? A table for clear comparison can be used, for example a Pugh matrix.
 
-\subsection{\translage{Proposed approach}/\translate{Chosen approach}}\label{subsec:chosenapproach}
+\subsection{\translate{Proposed approach}/\translate{Chosen approach}}\label{subsec:chosenapproach}
 Present your proposed or chosen approach. It is very important to motivate why this was chosen over
 the others. Connect back to your overall aim and problem statement, to ensure that the chosen
 approach actually can answer your scientific goals/research questions.
