Added publishing conditions for Diva.

--- a/miunthesis.cls
+++ b/miunthesis.cls
@@ -22,6 +22,8 @@
 \RequirePackage{mathpazo}
 \RequirePackage{verbatimbox}
 \RequirePackage{setspace}
+\RequirePackage{graphicx}
+\RequirePackage{pdfpages}
 
 
 %Set timeformat
