--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,8 @@
 \begin{document}
   \maketitle
   \pagenumbering{roman}
+  \includepdf[pages=1]{Diva_publish.pdf}
+  \newpage
   \include{00-abstract}
   \newpage
   
