--- a/08-conclusions.tex
+++ b/08-conclusions.tex
@@ -8,10 +8,10 @@ Answer your problem statement.
 Make clear conclusions regarding your goals, research questions and problem
 statement. Include your scientific contribution and impact.
 
-\subsubsection{\translate{Future Work}}\label{subsec:future_work}
+\subsection{\translate{Future Work}}\label{subsec:future_work}
 You should also explain potential future work based on your work.
 
-\subsubsection{Example of a future work}\label{subsec:example_future_work}
+\subsection{Example of a future work}\label{subsec:example_future_work}
 Remember to not just point out potential future work, also explain how you would
 approach this particular future work if you had the opportunity to do so.
 
