Bytt font i List of Figures och List of Tables
Fick feedback att fonten för figur och tabell kapitel ska vara sans-serif. Dessa rader fixar det problemet genom att sätta fonten detsamma som andra kapitel

--- a/miunthesis.cls
+++ b/miunthesis.cls
@@ -293,3 +293,7 @@
 \renewcommand{\cftsecpagefont}{\sffamily}
 \renewcommand{\cftsubsecpagefont}{\sffamily}
 \renewcommand{\cftsubsubsecpagefont}{\sffamily}
+
+%% List of Figures, Tables
+\renewcommand{\cftloftitlefont}{\large\bfseries\sffamily}
+\renewcommand{\cftlottitlefont}{\large\bfseries\sffamily}
