--- a/miunthesis.cls
+++ b/miunthesis.cls
@@ -293,7 +293,7 @@
 \renewcommand{\cftsubsecpagefont}{\sffamily}
 \renewcommand{\cftsubsubsecpagefont}{\sffamily}
 
-%% List of Figures, Tables
+%% List of Algorithm, Figures, Tables
 \renewcommand{\listalgorithmname}{\large\bfseries\sffamily List of Algorithms\vspace*{18pt}}
 \renewcommand{\cftloftitlefont}{\large\bfseries\sffamily}
 \renewcommand{\cftlottitlefont}{\large\bfseries\sffamily}
