Updated introduction, added optional heading, verifiable goals. Updated some of the text based on changes in the original template.

--- a/01-intro.tex
+++ b/01-intro.tex
@@ -4,13 +4,12 @@ your work. Explain if it is a project proposed by a company or from a research g
 
 \subsection{\translate{Background and motivation}}\label{subsec:background}
 \noindent 
-Bakgrund och motivation) Explain the background and the motivation for this work. In this
-sub-chapter you should try to quickly engage the readers' interest in the problem area you have
-chosen to examine. Demonstrate that you are familiar with the technical problem, and that you
-understand the context in which your problem emerges, that you can also describe it from a
-non-technical perspective, and that you are aware of the practical benefits of the technology you
-are examining. It is common that the first sentence contains an insightful formulation or historical
-retrospective.  
+Explain the background and the motivation for this work. In this sub-chapter you should try to
+quickly engage the readers' interest in the problem area you have chosen to examine. Demonstrate
+that you are familiar with the technical problem, and that you understand the context in which your
+problem emerges, that you can also describe it from a non-technical perspective, and that you are
+aware of the practical benefits of the technology you are examining. It is common that the first
+sentence contains an insightful formulation or historical retrospective.  
 
 \subsection{\translate{Overall aim and problem statement}}\label{subsec:aim}
 \noindent
@@ -24,8 +23,8 @@ The specified area must be answered later in the report's results and in its con
 statement should be so clearly defined, that deciding whether or not the problem has been resolved
 should be easy and understandable.
 
-\subsection{\translate{Scientific goals}/
-            \translate{Research questions}}\label{subsec:researchquestion}
+\subsection{\translate{Scientific goals}/\translate{Research questions}/\translate{Verifiable
+    goals}}\label{subsec:researchquestion}
 
 Choose only one of the headlines. Split this hard problem into a number of achievable, concrete,
 measurable, and verifiable scientific goals or a number of research questions that you will answer.
@@ -33,9 +32,9 @@ Use adjectives and quantify them when possible. Explain what the scientific know
 this work will be.
 
 \begin{enumerate}
-  \item ???
-  \item ???
-  \item ???
+  \item {???}
+  \item {???}
+  \item {???}
 \end{enumerate}
 
 \subsection{\translate{Scope}}\label{subsec:scope}
@@ -49,7 +48,7 @@ Briefly describe the report's outline. ``Chapter 2 describes\dots''
 
 \subsection{\translate{Division of work}}\label{subsec:contributions}
 \noindent 
-Describe which parts of the work that you have conducted yourself, and which
-parts that you had help with i.e.\ carried out by colleagues. If the work is
-carried out in a group the report should then explain how the tasks were divided
-between authors. All co-authors should be credited in the work as a whole.
+Describe which parts of the work that you have conducted yourself, and which parts that you had help
+with i.e.\ was carried out by colleagues or with extensive external aid. If the work is carried out
+in a group, this section should explain how the overall tasks were divided between authors. If you
+have done all the work yourself and has had no external aid, you can remove this section.
