updated text based on changes in original template

--- a/02-theory.tex
+++ b/02-theory.tex
@@ -26,12 +26,13 @@ scientific related works/”competitors”. Meaning other works that have done
 something similar to what you have done. One good place to begin this is work is
 by searching for similar works to yours on Google Scholar.
 
-\subsubsection{Example of a related work}\label{subsubsec:examplerelatedwork}
+\subsubsection{Example of a related work domain}\label{subsubsec:examplerelatedwork}
 Explain how your work will be similar and how you work will be different from
-their work. Put your work into relation to theirs.  Continue the list with one
-heading for each concrete piece of related work.
+their work. Put your work into relation to theirs. 
 
-\subsubsection{Another example of related work}\label{subsubsec:anotherexample}
+Continue the list with one heading for each concrete piece of related work.
+
+\subsubsection{Another example of related work domain}\label{subsubsec:anotherexample}
 Explain another related work.
 
 \subsubsection{Etc.\ until all related works has been covered}\label{subsubsec:etc}
