--- a/03-method.tex
+++ b/03-method.tex
@@ -1,33 +1,49 @@
 \section{\translate{Methodology}}\label{sec:method}
-Summarize and introduce the methodology chapter. The method section is the point
-at which your chosen method and intended procedure are presented. This section
-should contain information for the reader to interpret your results and repeat
-your work, i.e.\ in order to check the results. Here, the tools, assumptions,
-mathematical models, performance measures and assessment criteria are presented.
+Summarize and introduce the methodology chapter. The method section is the point at which your
+chosen method and intended procedure are presented. This section should contain information for the
+reader to interpret your results and repeat your work, i.e.\ in order to check the results. Here, the
+tools, assumptions, mathematical models, performance measures and assessment criteria are presented.
 
 \subsection{\translate{Scientific method description}}\label{subsec:scientificmethod}
-Explain your scientific method. Quantitative method? Design science? Engineering research? etc. 
+Explain your scientific method. Will you be using a quantitative or qualitative method? Most works
+in computer engineer will be \emph{quantitative} studies. Will you follow the design science
+methodology or some other methodology, such as action research method, descriptive research design,
+correlational research design, or experimental research design.  Explain how you will scientifically
+attack and work with each of the scientific goals/research questions. One paragraph per
+goal/question is often enough.
 
-Explain how you will attack and work with each of the scientific/knowledge
-goals/research questions. One paragraph per scientific goal/question is often
-enough.
+\subsection{\translate{Project method description}/\translate{Work method
+    description}}\label{subsec:projectmethod}
+Explain your project and/or working method. Split the work into a number of achievable
+milestones/phases.
 
-\subsection{\translate{Project method description}}\label{subsec:projectmethod}
+Many theses work in computer engineering typically follow either a \emph{waterfall} inspired method
+akin to the structure of this report: \emph{Theory} (in which you will gain more knowledge about the
+requirements to be able to solve the problem),\emph{Pre-study} (where you will further refine
+analyze your requirements, approach, design, etc.), \emph{Implementation} (where you will build some
+artifact), \emph{Measure} (in which you will perform measurements on your artifact), and
+\emph{Evaluate} (where you will analyze and evaluate your results and measurements). 
 
-Explain your project method. Split the work into a number of achievable milestones/phases. Many
-theses work in computer engineering are typically split into the following parts: 
-\emph{Theory} (in which you will gain more knowledge to be able to solve the problem),
-\emph{Pre-study} (where you will further refine your requirements, approach, design, etc.),
-\emph{Implementation} (where you will build some artifact), Measure (in which you will perform
-measurements on your artifact), and \emph{Evaluation} (where you will analyze and evaluate your
-results and measurements).  
+Or a more \emph{design science} inspired structure: \emph{Identify problems} (in which you define
+the problem and show importance), \emph{Define objectives} (in which you define requirements, etc.),
+\emph{Design & development} (where you will build some artifact), \emph{Demonstration} (where you
+use the artifact to solve the problem), \emph{Evaluation} (where you observe its effectiveness),
+\emph{Communication} (making your results public). 
 
-Explain how you will work and do within each of these milestones/phases. Justify
-your choice of methodology/model. What metrics will you use to evaluate your work? Comment on the
-method's possible weaknesses and problems that may arise during actual implementation. A flowchart
-can help in visualizing the work. One paragraph per milestone/phase is often enough to write.
+Or a more \emph{design thinking} inspired structure: \emph{Empathize} (where you gain real insight
+into users and their needs), \emph{Define} (where you define the problem statement in a
+human-centered manner.), \emph{Ideate} (where you identify innovative solutions to the problem
+statement you’ve created), \emph{Prototype} (where you create possible solutions), \emph{Test}
+(where you test solutions to derive a deep understanding of the product and its users). 
+
+Explain how you will work and do within each of these milestones/phases. Justify your choice of
+methodology/model. What metrics will you use to evaluate your work? Comment on the method's possible
+weaknesses and problems that may arise during actual implementation. A flowchart can help in
+visualizing the phases/milestones. One paragraph per milestone/phase is often enough to write.
+
 
 \subsection{\translate{Project evaluation method}}\label{subsec:evalmethod}
-How will you look back upon your whole thesis work in the end and evaluate if it
-was a success? Focus on your whole thesis project process and remember that this
-is different from your measurements/evaluation of your implementation.
+How will you look back upon your whole thesis work in the end and evaluate if it was a success?
+Focus on your whole thesis project process and remember that this is different from your
+measurements/evaluation of your implementation. How will you work with the questions in the
+discussion chapter?
