Updated text and headings based upon changes in the original template

--- a/04-prestudy.tex
+++ b/04-prestudy.tex
@@ -1,9 +1,9 @@
-\section{\translate{Pre study}/\translate{Approach}}\label{sec:prestudy} 
+\section{\translate{Choice of approach}/\translate{System design}\translate{Pre-study}}\label{sec:prestudy} 
 
 Choose only one of the headlines. This chapter will be substantially different depending on your
 thesis topic, direction, and scientific level. But in this chapter, you will present the different
 options you have faced and made your choice between, or you will explain the pre-study that has led
-up to your design, implementation, and your analysis of different requirement.        
+up to your implementation, and your analysis of different requirement.        
 
 \subsection{\translate{Requirements capturing}/\translate{Approach alternatives}}\label{subsec:solutionalt}
 Explain the requirement capturing and the identified requirements, or the different approach alternatives.
