Updated text based upon changes in the original template

--- a/00-acknowledgements.tex
+++ b/00-acknowledgements.tex
@@ -1,7 +1,7 @@
-\section*{\translate{Acknowledgements}}\label{sec:acknowledgements}
+\section*{\translate{Acknowledgements}/\translate{Foreword}}\label{sec:acknowledgements}
 \phantomsection
 \addcontentsline{toc}{section}{\translate{Acknowledgements}} 
-Acknowledgements are not mandatory but can be applied if you as the writer wish to provide general
-information about your exam work or project work, educational programme, institution, business,
-tutors and personal comments, i.e.\ thanks to any persons that may have helped you. Acknowledgements
-are to be placed on a separate page.
+Acknowledgements or Foreword (choose only one of the heading alternatives) are not mandatory but can
+be applied if you as the writer wish to provide general information about your exam work or project
+work, educational program, institution, business, tutors and personal comments, i.e. thanks to any
+persons that may have helped you. Acknowledgements are to be placed on a separate page.
