--- a/00-terminology.tex
+++ b/00-terminology.tex
@@ -1,19 +1,25 @@
-\section*{\translate{Terminology}}\label{sec:terminology}
+\section*{\translate{Terminology}/\translate{Notation}}\label{sec:terminology}
 \phantomsection
-\addcontentsline{toc}{section}{Terminology / Notation}
+\addcontentsline{toc}{section}{Terminology / Notation} %Choose one
 (Choose one of the headline alternatives.) 
-A possible list of terms, abbreviations and variable names with brief
-explanations may be placed after the table of contents, but is not required.
-Note that although a term is explained in the list of terms, it should also be
-explained in the chapter text where it is used the first time.
+A possible list of terms, abbreviations and variable names with brief explanations may be placed
+after the table of contents, but is not required.  Note that although a term is explained in the
+list of terms, it should also be explained in the chapter text where it is used the first time. This
+list shall be in alphabetical order
+
+\paragraph{Acronyms/Abbreviations}
 
 \begin{table}[ht!]
   \begin{tabular}{l l}
-DL & Description Logic\\
-GDPR & General Data Protection Regulation\\
-ICT & Information and Communication Technologies\\
-ILO & Intended Learning Outcome\\
-MCQ & Multiple Choice Questions\\
-SBA & Single Best Answer\\
-\end{tabular}
+  ACK & Acknowledge.\\
+  AWGN & Additive White Gaussian Noise\\
+  \end{tabular}
+\end{table}
+
+\paragraph{Mathematical notation}
+
+\begin{table}[ht!]
+  \begin{tabular}{l l}
+  $G(x)$ & RC generator polynomial\\
+  \end{tabular}
 \end{table}
