--- a/00-sammanfattning.tex
+++ b/00-sammanfattning.tex
@@ -1,12 +1,5 @@
 \section*{Sammanfattning}\label{sec:sammanfattning}
-Sammanfattningen fungerar som en beskrivning av rapportens innehåll. Detta möjliggör möjlighet att
-få en snabb genomgång av rapporten och ger en översikt över hela rapporten, dvs\ innehåller allt
-från mål och metoder till resultat och slutsatser. Exempel: ”Syftet med denna studie har varit att
-svara på frågan\dots. Studien har genomförts med hjälp av\dots Studien har visat att\dots” Nämn
-inget som inte tas upp i rapporten. En abstrakt skrivs i ett stycke och rekommenderad längd är 200
---- 250 ord. Hänvisningar till rapportens text, källor eller bilagor är inte tillåtna; de abstrakt
-ska "stå på egen hand". Använd endast vanlig text, utan tecken kursiv eller fet stil och inga
-matematiska formler. Sammanfattningen kan kompletteras genom att inkludera nyckelord; detta kan
-underlätta sökningen efter rapporten i bibliotekets databaser.
+Also write the abstract in Swedish. If you write your thesis in Swedish, Sammanfattning should be
+before Abstract. %This is automatically handled by this latex class.
 
 \textbf{Keywords:} LaTeX 
